syntax = "proto2"; 


message VulkanLayer {
    optional string name = 1;
    repeated string inputs = 2;
    repeated string outputs = 3;
    enum VulkanMode {
        RESHAPE = 0;
        FLATTEN = 1;
    }
    optional VulkanMode layer_mode = 4;
    message Vulkan_Parameters {
        repeated string target_shape = 1;
        optional string start_dim = 2;
        optional string end_dim = 3;
    }
    optional Vulkan_Parameters layer_params = 5;
    optional string layer_builder = 6;
}
